modified appointments.jsp